load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/emcfarlane/larking
# gazelle:proto disable
gazelle(name = "gazelle")

# TODO: protov2 compilers

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    "container_push",
    #"container_layer",
    #"container_image",
)

container_bundle(
    name = "bundle",
    images = {
        "bazel:larking": "//cmd/larking:image",
    },
)

container_push(
    name = "gcr_larking",
    format = "Docker",
    image = "//cmd/grapbpb:image",
    registry = "gcr.io",
    repository = "",  # TODO: deploy somewhere
    tag = "latest",
)

go_library(
    name = "go_default_library",
    srcs = [
        "code.go",
        "codec.go",
        "handler.go",
        "lexer.go",
        "mux.go",
        "proxy.go",
        "rules.go",
        "server.go",
        "starlark.go",
    ],
    importpath = "github.com/emcfarlane/larking",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_emcfarlane_starlarkproto//:go_default_library",
        "@com_github_soheilhy_cmux//:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@net_starlark_go//starlark:go_default_library",
        "@net_starlark_go//starlarkstruct:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//encoding:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//reflection/grpc_reflection_v1alpha:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protodesc:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//reflect/protoregistry:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
        "@org_golang_google_protobuf//types/dynamicpb:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/fieldmaskpb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "handler_test.go",
        "lexer_test.go",
        "proxy_test.go",
        "rules_test.go",
        "server_test.go",
        "starlark_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//testpb:go_default_library",
        "@com_github_emcfarlane_starlarkassert//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@net_starlark_go//starlark:go_default_library",
        "@net_starlark_go//starlarkstruct:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_google_protobuf//types/known/fieldmaskpb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
