load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/emcfarlane/larking/cmd/larking",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "larking",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@distroless//image",
    entrypoint = ["/larking"],
    files = [":larking"],
    visibility = ["//visibility:public"],
)
