load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/emcfarlane/larking/cmd/lark",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@com_github_emcfarlane_starlarkrepl//:go_default_library",
        "@net_starlark_go//repl:go_default_library",
        "@net_starlark_go//starlark:go_default_library",
        "@net_starlark_go//starlarkstruct:go_default_library",
    ],
)

go_binary(
    name = "lark",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
