load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    deps = ["@googleapis//google/api:annotations_proto"],
)

java_proto_library(
    name = "helloworld_java_proto",
    visibility = ["//visibility:public"],
    deps = [":helloworld_proto"],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    srcs = [":helloworld_proto"],
    visibility = ["//visibility:public"],
    deps = [":helloworld_java_proto"],
)

proto_library(
    name = "hellostream_proto",
    srcs = ["hellostream.proto"],
    deps = ["@googleapis//google/api:annotations_proto"],
)

java_proto_library(
    name = "hello_streaming_java_proto",
    visibility = ["//visibility:public"],
    deps = [":hello_streaming_proto"],
)

java_grpc_library(
    name = "hello_streaming_java_grpc",
    srcs = [":hello_streaming_proto"],
    visibility = ["//visibility:public"],
    deps = [":hello_streaming_java_proto"],
)
