#load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["helloworld.proto"],
    deps = ["@googleapis//google/api:annotations_proto"],
)

cc_proto_library(
    name = "helloworld_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":helloworld_proto"],
)

cc_grpc_library(
    name = "helloworld_cc_grpc",
    srcs = [":helloworld_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":helloworld_cc_proto"],
)

java_proto_library(
    name = "helloworld_java_proto",
    visibility = ["//visibility:public"],
    deps = [":helloworld_proto"],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    srcs = [":helloworld_proto"],
    visibility = ["//visibility:public"],
    deps = [":helloworld_java_proto"],
)

proto_library(
    name = "hellostream_proto",
    srcs = ["hellostream.proto"],
    deps = ["@googleapis//google/api:annotations_proto"],
)

cc_proto_library(
    name = "hellostream_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":hellostream_proto"],
)

cc_grpc_library(
    name = "hellostream_cc_grpc",
    srcs = [":hellostream_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":hellostream_cc_proto"],
)

java_proto_library(
    name = "hello_streaming_java_proto",
    visibility = ["//visibility:public"],
    deps = [":hello_streaming_proto"],
)

java_grpc_library(
    name = "hello_streaming_java_grpc",
    srcs = [":hello_streaming_proto"],
    visibility = ["//visibility:public"],
    deps = [":hello_streaming_java_proto"],
)

go_proto_library(
    name = "annotations_go_proto",
    importpath = "",
    protos = ["@googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "helloworld_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/emcfarlane/graphpb/examples/proto/helloworld",
    protos = [
        #":hellostream_proto",
        ":helloworld_proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        #"@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)

# TODO: https://github.com/bazelbuild/rules_go/pull/2740
#go_library(
#    name = "go_default_library",
#    srcs = [
#        "hellostream.pb.go",
#        "hellostream_grpc.pb.go",
#        "helloworld.pb.go",
#        "helloworld_grpc.pb.go",
#    ],
#    importpath = "github.com/emcfarlane/graphpb/examples/proto",
#    visibility = ["//visibility:public"],
#    deps = [
#        "@com_github_golang_protobuf//proto:go_default_library",
#        "@go_googleapis//google/api:annotations_go_proto",
#        "@org_golang_google_grpc//:go_default_library",
#        "@org_golang_google_grpc//codes:go_default_library",
#        "@org_golang_google_grpc//status:go_default_library",
#        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
#        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
#    ],
#)
