load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["status.go"],
    importpath = "github.com/emcfarlane/graphpb/grpc/status",
    visibility = ["//visibility:public"],
    deps = [
        "//grpc/codes:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoregistry:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
    ],
)
