load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/emcfarlane/graphpb/examples/go/helloworld",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//examples/proto:helloworld_go_proto",
        "@com_github_soheilhy_cmux//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "helloworld",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
