load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/emcfarlane/larking/examples/go/helloworld",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//examples/proto:helloworld_go_proto",
        "@com_github_soheilhy_cmux//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "helloworld",
    embed = [":helloworld_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "helloworld_lib",
    srcs = ["main.go"],
    importpath = "larking.io/examples/go/helloworld",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_soheilhy_cmux//:cmux",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)
